[test] 전반적인 테스트 코드 수정