@@ -1,34 +1,28 @@
 package com.dao.momentum.retention.prospect.command.application.service;
 
-import com.dao.momentum.organization.department.command.domain.aggregate.Department;
-import com.dao.momentum.organization.department.command.infrastructure.repository.JpaDepartmentRepository;
 import com.dao.momentum.organization.employee.command.domain.aggregate.Employee;
 import com.dao.momentum.organization.employee.command.domain.repository.EmployeeRepository;
 import com.dao.momentum.retention.prospect.command.domain.aggregate.RetentionInsight;
 import com.dao.momentum.retention.prospect.command.domain.aggregate.RetentionSupport;
 import com.dao.momentum.retention.prospect.command.domain.repository.RetentionInsightRepository;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 class RetentionInsightCommandServiceImplTest {
 
     @Mock
     private RetentionInsightRepository insightRepository;
-
-    @Mock
-    private JpaDepartmentRepository departmentRepository;
 
     @Mock
     private EmployeeRepository employeeRepository;
@@ -38,20 +32,14 @@ class RetentionInsightCommandServiceImplTest {
 
     private final int roundId = 1;
 
-    private final Department deptA = Department.builder().deptId(10).build();
-    private final Department deptB = Department.builder().deptId(20).build();
-
     private final Employee emp1 = Employee.builder().empId(101L).deptId(10).positionId(1).build();
     private final Employee emp2 = Employee.builder().empId(102L).deptId(10).positionId(1).build();
     private final Employee emp3 = Employee.builder().empId(103L).deptId(20).positionId(2).build();
 
     @Test
-    @DisplayName("근속 인사이트 생성 - 부서+직위별 그룹핑 및 평균, 퍼센타일 계산 성공")
+    @DisplayName("근속 인사이트 생성 - 부서+직위별 그룹핑 및 평균 계산 성공")
     void generateInsights_success() {
         // given
-        List<Department> depts = List.of(deptA, deptB);
-        when(departmentRepository.findActiveLeafDepartments()).thenReturn(depts);
-
         List<RetentionSupport> supports = List.of(
                 RetentionSupport.builder().empId(101L).retentionScore(70).build(),
                 RetentionSupport.builder().empId(102L).retentionScore(90).build(),
@@ -59,7 +47,7 @@ class RetentionInsightCommandServiceImplTest {
         );
 
         List<Employee> employees = List.of(emp1, emp2, emp3);
-        when(employeeRepository.findAllById(any())).thenReturn(employees);
+        when(employeeRepository.findAllById(Set.of(101L, 102L, 103L))).thenReturn(employees);
 
         // when
         List<RetentionInsight> result = service.generateInsights(roundId, supports);
@@ -70,7 +58,7 @@ class RetentionInsightCommandServiceImplTest {
         RetentionInsight insightA = result.stream()
                 .filter(i -> i.getDeptId().equals(10) && i.getPositionId().equals(1))
                 .findFirst().orElseThrow();
-        assertThat(insightA.getRetentionScore()).isEqualTo(80); // (70+90)/2
+        assertThat(insightA.getRetentionScore()).isEqualTo(80); // (70 + 90) / 2
         assertThat(insightA.getEmpCount()).isEqualTo(2);
 
         RetentionInsight insightB = result.stream()
@@ -81,16 +69,14 @@ class RetentionInsightCommandServiceImplTest {
     }
 
     @Test
-    @DisplayName("근속 인사이트 생성 - 인사이트 없는 부서는 제외됨")
-    void generateInsights_emptyDepartmentIsSkipped() {
+    @DisplayName("근속 인사이트 생성 - 사원이 매핑되지 않으면 해당 RetentionSupport는 제외됨")
+    void generateInsights_missingEmployee_skipsSupport() {
         // given
-        when(departmentRepository.findActiveLeafDepartments()).thenReturn(List.of(deptA));
-
         List<RetentionSupport> supports = List.of(
-                RetentionSupport.builder().empId(103L).retentionScore(50).build() // emp3: deptId=20
+                RetentionSupport.builder().empId(999L).retentionScore(88).build()
         );
 
-        when(employeeRepository.findAllById(any())).thenReturn(List.of(emp3));
+        when(employeeRepository.findAllById(Set.of(999L))).thenReturn(Collections.emptyList());
 
         // when
         List<RetentionInsight> result = service.generateInsights(roundId, supports);
@@ -100,14 +86,15 @@ class RetentionInsightCommandServiceImplTest {
     }
 
     @Test
-    @DisplayName("근속 인사이트 생성 - 사원에 매핑된 부서가 없으면 제외됨")
-    void generateInsights_missingEmployeeMapping_skipsSupport() {
+    @DisplayName("근속 인사이트 생성 - 유효한 사원이 하나도 없을 경우 전체 결과 없음")
+    void generateInsights_allSupportsSkipped() {
         // given
-        when(departmentRepository.findActiveLeafDepartments()).thenReturn(List.of(deptA));
         List<RetentionSupport> supports = List.of(
-                RetentionSupport.builder().empId(999L).retentionScore(88).build() // unknown empId
+                RetentionSupport.builder().empId(999L).retentionScore(80).build(),
+                RetentionSupport.builder().empId(998L).retentionScore(60).build()
         );
-        when(employeeRepository.findAllById(Set.of(999L))).thenReturn(Collections.emptyList());
+
+        when(employeeRepository.findAllById(anySet())).thenReturn(Collections.emptyList());
 
         // when
         List<RetentionInsight> result = service.generateInsights(roundId, supports);
